# montaj

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SKILL.md  misc.md  pyproject.toml
Formula/: montaj.rb
adaptors/stitch/: adaptor.js  package.json  prompt.md  schema.json
cli/: deps.py  help.py  main.py  mcp_schema.py  output.py
cli/commands/: adaptor.py  analyze_media.py  analyze_video.py  apply_cuts.py  approve.py  best_take.py  caption.py  concat.py  create_step.py  credentials.py  doctor.py  extract_audio.py  fetch.py  ffmpeg_captions.py  filler.py  generate_image.py  generate_music.py  generate_voiceover.py  init.py  install.py  jump_cut_detect.py  kling_generate.py  lyrics_render.py  lyrics_sync.py  materialize_cut.py  mcp.py  models.py  normalize.py  pacing.py  probe.py  profile.py  regen.py  remove_bg.py  render.py  resize.py  rm_nonspeech.py  run.py  serve.py  snapshot.py  status.py  (+9 more)
connectors/: __init__.py  gemini.py  kling.py  openai.py
docs/: ARCHITECTURE.md  CLI.md  CONNECTORS.md  PROFILES.md  RENDER.md  UI.md
docs/schemas/: adaptor.md  lyric-phrase.md  overlay.md  project.md  step.md  workflow.md
engine/: resolve_workflow.py  validate.py  validate_step.py
lib/: __init__.py  ai_video.py  common.py  credentials.py  models.py  normalize.py  project_types.py  trim_spec.py  workflow.py
lib/types/: __init__.py  kling.py  project.py
mcp/: package-lock.json  package.json  server.js
profiles/: analyze.py  schema.json
project/: init.py  render.py
render/: bundle.js  compose.js  encode-segment.js  mix-audio.js  package-lock.json  package.json  render.js  renderer.js  segment-plan.js
render/core/: index.js  interpolate.js  spring.js
render/test/: compose-helpers.test.mjs  encode-segment.test.mjs  integration-compose.test.mjs  render-helpers.test.mjs  segment-plan.test.mjs
schema/: enums.yaml
scripts/: gen_types.py
serve/: server.py  sse.py  watcher.py
skills/ai-video/: SKILL.md
skills/ai-video-generate/: SKILL.md
skills/ai-video-plan/: SKILL.md
skills/animation-sections/: SKILL.md
skills/camera-vocabulary/: SKILL.md
skills/canvas-sections/: SKILL.md
skills/edit-session/: SKILL.md
skills/eval-scenes/: SKILL.md
skills/lyrics-video/: SKILL.md
skills/mcp/: SKILL.md
skills/onboarding/: SKILL.md
skills/overlay/: SKILL.md
skills/parallel/: SKILL.md
skills/select-takes/: SKILL.md
skills/serve/: SKILL.md
skills/style-profile/: SKILL.md
skills/waveform-silence/: SKILL.md
skills/workflow-builder/: SKILL.md
skills/write-overlay/: SKILL.md
steps/: analyze_video.json  analyze_video.py  apply_cuts.json  apply_cuts.py  best_take.json  best_take.py  caption.json  concat.json  concat.py  crop_spec.json  cut.json  cut.py  extract_audio.py  fetch.json  ffmpeg_captions.json  ffmpeg_captions.py  jump_cut_detect.json  jump_cut_detect.py  kling_generate.json  kling_generate.py  lyrics_render.json  lyrics_render.py  lyrics_sync.json  lyrics_sync.py  materialize_cut.json  materialize_cut.py  normalize.py  pacing.json  pacing.py  probe.json  remove_bg.json  remove_bg.py  resize.json  rm_fillers.json  rm_fillers.py  rm_nonspeech.json  rm_nonspeech.py  snapshot.json  snapshot.py  transcribe.py  (+7 more)
steps/audio/: extract_audio.json  extract_audio.py  stem_separation.json  stem_separation.py  waveform_image.py  waveform_trim.py
tests/: conftest.py  test_ai_video_lib.py  test_common.py  test_connectors_gemini.py  test_connectors_kling.py  test_connectors_openai.py  test_credentials.py  test_engine.py  test_init.py  test_install_cli.py  test_models.py  test_remove_bg.py  test_server_intake.py  test_server_reserve_path.py  test_trim_spec.py
ui/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ui/src/: App.tsx  (+2 more)
workflows/: ai_video.json  animations.json  basic_trim.json  canvas.json  clean_cut.json  explainer.json  floating_head.json  lyrics_video.json  mix_animations.json  mix_canvas.json  overlays.json  rvm_presenter.json  short_captions.json  trim_and_caption.json  trim_and_overlay.json
(+138 files in other folders)
