[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "montaj"
version = "0.1.0"
description = "Video editing toolkit — local-first, CLI-driven, agent-friendly"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0",
    "yt-dlp>=2026.3",
    "curl_cffi>=0.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "watchdog>=4.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "static-ffmpeg>=2.5",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-timeout"]
rvm = ["torch>=2.0", "torchvision>=0.15", "av>=12.0"]
demucs = ["demucs>=4.0", "torch>=2.0", "torchaudio>=2.0"]

[tool.setuptools.packages.find]
include = ["cli*", "serve*", "engine*", "project*", "lib*", "profiles*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
markers   = [
    "slow: tests that take more than a few seconds",
]

[project.urls]
Homepage = "https://github.com/theSamPadilla/montaj"
Repository = "https://github.com/theSamPadilla/montaj"

[project.scripts]
montaj = "cli.main:main"
mtj    = "cli.main:main"
